[gd_scene load_steps=5 format=3 uid="uid://cy8cg762mitdb"]

[ext_resource type="Theme" uid="uid://1a6edw4xe1vt" path="res://main_ui.tres" id="1"]
[ext_resource type="Script" uid="uid://cn3qidx5pu737" path="res://scripts/warning_popup.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cdmjka5obhjpa" path="res://Cinzel-VariableFont_wght.ttf" id="3"]
[ext_resource type="Theme" uid="uid://3tb6bit6vroh" path="res://Image/UI/MapleButtonComplete.tres" id="4"]

[node name="WarningPopup" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 350.0
offset_right = -600.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
script = ExtResource("2")

[node name="WarningLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_bottom = 39.0
grow_horizontal = 0
theme = ExtResource("4")
